--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -24,7 +25,8 @@
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "prettier": "^2.8.2"
+    "prettier": "^2.8.2",
+    "prop-types": "^15.8.1"
   },
   "private": true
 }
