--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "expo-blur": "~12.0.1"
+    "expo-blur": "~12.0.1",
+    "@shopify/flash-list": "1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
