--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "expo-blur": "~12.0.1",
-    "@shopify/flash-list": "1.3.1"
+    "@shopify/flash-list": "1.3.1",
+    "typescript": "^4.6.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
